# AIMovie

./: .gitignore  CHANGELOG.md  CLOUD_USAGE_GUIDE.md  CONTRIBUTING.md  CURSOR_GIT_SETUP.md  DEPENDENCY_GUIDE.md  LICENSE  PROJECT_CLEANUP_SUMMARY.md  QUICK_DEPLOY.md  README.md  README_DEPLOYMENT.md  RELEASE_NOTES.md  SETUP_GITHUB.md  SUPPORTED_MODELS.md  USAGE_GUIDE.md  deploy_docker.sh  deploy_final.bat  deploy_server.sh  deploy_simple.bat  deploy_win11.bat  deploy_windows.bat  env_template.txt  fix_git_path.ps1  fix_git_simple.ps1  pyproject.toml  requirements.txt  requirements_cloud.txt  requirements_cloud_minimal.txt  simple_test.py  start.py  start_cloud.py  test_env.py  test_subtitle.srt  一键启动.bat  启动AIMovie.bat  项目结构说明.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
data/samples/: README.md
docker/: nginx.conf
frontend/: cloud_streamlit_app.py  config_selector.py
src/agents/: cloud_llm_agent.py  cloud_narration_agent.py  cloud_speech_agent.py  cloud_tts_agent.py  cloud_video_analysis_agent.py  subtitle_agent.py  subtitle_narration_agent.py  video_editing_agent.py
src/api/: cloud_main.py
src/config/: cloud_settings.py  dev_settings.py  preset_configs.py
src/utils/: audio_utils.py  cache_manager.py  cost_optimizer.py  file_utils.py  media_generator.py  monitoring.py  robust_media_generator.py  video_utils.py
tests/: test_basic.py
